Prevent title from wrapping

--- a/docs/style.css
+++ b/docs/style.css
@@ -44,6 +44,7 @@ h1 {
 	font-weight: normal;
 	font-style: italic;
 	color: #555;
+	white-space: nowrap;
 }
 h1 > strong {
 	font-style: normal;
